--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -18,7 +18,7 @@ import Layout from "../layout/Layout.astro";
         <div class="text-center">
           <a href="https://www.uv.mx/r">
             <img
-              src="/UV.png"
+              src="/SolarTrackers/UV.png"
               alt="Universidad Veracruzana"
               class="mx-auto w-96 h-auto mb-4 border-4 border-green-500"
             />
@@ -30,7 +30,7 @@ import Layout from "../layout/Layout.astro";
         <div class="text-center">
           <a href="https://www.uv.mx/fime/">
             <img
-              src="/FIME.png"
+              src="/SolarTrackers/FIME.png"
               alt="Facultad de Ingeniería Mecánica y Eléctrica"
               class="mx-auto w-96 h-auto mb-4 border-4 border-green-500"
             />
