--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ import Layout from "../layout/Layout.astro";
         eje y se analiza su comportamiento y rendimiento en diferentes condiciones. 
       <div class="flex justify-center mt-6">
         <a
-          href="/seguidores-solares"
+          href="/SolarTrackers/seguidores-solares"
           class="bg-lime-500 text-white px-6 py-2 rounded-md hover:bg-lime-600 transition-all duration-300 dark:bg-lime-600 dark:hover:bg-lime-700"
         >
           Más Información
