--- a/src/pages/tipo-seguidores.astro
+++ b/src/pages/tipo-seguidores.astro
@@ -32,7 +32,7 @@ import Layout from "../layout/Layout.astro";
       </p>
     <div class="flex justify-center">
         <img
-          src="/SeguidorMonoaxial.png"
+          src="/SolarTrackers/SeguidorMonoaxial.png"
           alt="Seguidores De Un Eje"
           class="w-[40rem] h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -103,21 +103,21 @@ import Layout from "../layout/Layout.astro";
 
       <div class="flex justify-center">
         <img
-          src="/pasivo.jpg"
+          src="/SolarTrackers/pasivo.jpg"
           alt="Seguidores Solares"
           class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
       </div>
       <div class="flex justify-center">
         <img
-          src="/seguidorpasivpo.png"
+          src="/SolarTrackers/seguidorpasivpo.png"
           alt="Seguidor Pasivo"
           class="w-[30rem] h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
       </div>
       <div class="flex justify-center">
         <img
-          src="/estructura seguidor pasivo.png"
+          src="/SolarTrackers/estructura seguidor pasivo.png"
           alt="Estructura Seguidor Pasivo"
           class="w-[30rem] h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -144,7 +144,7 @@ import Layout from "../layout/Layout.astro";
       </p>
       <div class="flex justify-center">
         <img
-          src="/SeguidorSolarActivo.png"
+          src="/SolarTrackers/SeguidorSolarActivo.png"
           alt="Seguidor Activo"
           class="w-[30rem] h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -194,7 +194,7 @@ import Layout from "../layout/Layout.astro";
       </p>
       <div class="flex justify-center">
         <img
-          src="/SeguidorHorizontal.png"
+          src="/SolarTrackers/SeguidorHorizontal.png"
           alt="Seguidor Horizontal"
           class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -226,7 +226,7 @@ import Layout from "../layout/Layout.astro";
       </p>
       <div class="flex justify-center">
         <img
-          src="/SeguidorVertical.png"
+          src="/SolarTrackers/SeguidorVertical.png"
           alt="Seguidor Vertical"
           class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -269,7 +269,7 @@ import Layout from "../layout/Layout.astro";
 
       <div class="flex justify-center">
         <img
-          src="/Seguidor Polar.png"
+          src="/SolarTrackers/Seguidor Polar.png"
           alt="Seguidor Polar"
           class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -296,7 +296,7 @@ import Layout from "../layout/Layout.astro";
         <div class="flex flex-col items-center justify-center">
           <h4 class="font-bold dark:text-gray-300 text-gray-700">AADAT</h4>
           <img
-            src="/AADAT.jpg"
+            src="/SolarTrackers/AADAT.jpg"
             alt="AADAT"
             class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
           />
@@ -304,7 +304,7 @@ import Layout from "../layout/Layout.astro";
         <div class="flex flex-col items-center justify-center">
           <h4 class="font-bold dark:text-gray-300 text-gray-700">TTDAT</h4>
           <img
-            src="/TTDAT.jpg"
+            src="/SolarTrackers/TTDAT.jpg"
             alt="TTDAT"
             class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
           />
@@ -351,7 +351,7 @@ import Layout from "../layout/Layout.astro";
 
       <div class="flex justify-center">
         <img
-          src="/dobleeje.jpg"
+          src="/SolarTrackers/dobleeje.jpg"
           alt="Doble Eje"
           class="w-xl h-auto mb-6 rounded-md shadow-lg border-4 border-green-400"
         />
@@ -359,7 +359,7 @@ import Layout from "../layout/Layout.astro";
 
       <div class="flex justify-center mt-6">
         <a
-          href="/seguidores-solares"
+          href="/SolarTrackers/seguidores-solares"
           class="bg-lime-500 text-white px-6 py-2 rounded-md hover:bg-lime-600 transition-all duration-300 dark:bg-lime-600 dark:hover:bg-lime-700"
         >
           Volver a Seguidores Solares
